--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
+    "start": "node dist/src/server.js",
+    "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "knex:migrate": "knex --knexfile dist/knexfile.js migrate:latest",
+    "knex:rollback": "knex --knexfile dist/knexfile.js migrate:rollback",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
@@ -28,6 +30,6 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "nodemailer-express-handlebars": "^4.0.0",
-    "sqlite3": "^5.0.0"
+    "pg": "^8.3.3"
   }
 }
